# IPC

./: AnonymousPipe.c  CMakeLists.txt  CMakeNotes.txt  ErrorHandling.c  ErrorHandling.h  FIFOClient.c  FIFOServer.c  ParentChildAnonymousPipe.c
AnonymousPipes/: AnonymousPipe.c  CMakeLists.txt  ParentChildAnonymousPipe.c
MessageQueues/Receiver/: CMakeLists.txt  receiver.c
MessageQueues/Sender/: CMakeLists.txt  sender.c
NamedPipes/Client/: CMakeLists.txt  FIFOClient.c
NamedPipes/Server/: CMakeLists.txt  FIFOServer.c
NamedPipes/UsingMkFifo/: CMakeLists.txt  fifo1.c
Semaphores/: CMakeLists.txt  semaphoreExample.c  threadExample.c
